NLP TP/texts/robotics/robotics.stackexchange_0000043788.txt
Q:

how to launch a launch file from python code

i am working on voice and i want to launch a file from within my python script what i have tried is
if command == 'that':
        file_path =  "/opt/ros/fuerte/stacks/fuerte_workspace/dynamixel_motor/dynamixel_tutorials/launch/controller_spawner.launch"
        execfile(file_path)

[ERROR] [WallTime: 1346657638.343076] bad callback: <bound method TalkBack.talkback of <__main__.TalkBack instance at 0x9bcca8c>>
Traceback (most recent call last):
  File "/opt/ros/fuerte/lib/python2.7/dist-packages/rospy/topics.py", line 678, in _invoke_callback
    cb(msg)
  File "/opt/ros/fuerte/stacks/fuerte_workspace/pi_speech_tutorial/nodes/talkback.py", line 79, in talkback
    execfile(file_path)
  File "/opt/ros/fuerte/stacks/fuerte_workspace/dynamixel_motor/dynamixel_tutorials/launch/controller_spawner.launch", line 1
    <!-- -*- mode: XML -*- -->
    ^
SyntaxError: invalid syntax

please help

Originally posted by karan4515 on ROS Answers with karma: 73 on 2012-09-02
Post score: 2

A:

You cannot use execfile because it runs a python file. Launch files are xml files that describe which parameters to set and which nodes to run.
To execute a launch file, you can use subprocess.call to execute roslaunch and give it either the absolute path to your launch file or two parameters where the first is the package of your launch file and the second is the name of the file.

Originally posted by Lorenz with karma: 22731 on 2012-09-02
This answer was ACCEPTED on the original site
Post score: 5

Original comments
Comment by CatherineH on 2015-07-13:
Given that roslaunch is implemented in python, this answer seems a little dissatisfying.

